<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        app:startIconDrawable="@drawable/ic_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconContentDescription="email_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        app:startIconDrawable="@drawable/ic_pass"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconContentDescription="email_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_data" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="login"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/aceptar" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/cancelar" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_cuenta"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#262626"
            android:text="@string/registrate"/>
    </LinearLayout>


</LinearLayout>